[BNK-168] Fix : 금융차트주식 DB 데이터 저장 및 조회 방식 수정